--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "botframework-directlinejs",
+  "name": "botframework-directlinea-angular6",
   "version": "0.10.1-0",
-  "description": "client library for the Microsoft Bot Framework Direct Line 3.0 protocol",
+  "description": "client library for the Microsoft Bot Framework Direct Line 3.0 protocol. THIS IS A BETA TESTING PROJECT TO MAKE THIS PROJECT COMPATIBLE WITH ANGULAR 6 RXJS VERSION MISMATCH ISSUE. PLEASE DONT USE FOR PRODUCTION PURPOSE. THIS MAY NOT GIVE YOU YOUR INTENDED BEHAVIOR.",
   "main": "built/directLine.js",
   "types": "built/directLine.d.ts",
   "scripts": {
@@ -15,14 +15,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://git@github.com/Microsoft/BotFramework-DirectLineJS.git"
+    "url": "https://github.com/demonking99/BotFramework-DirectLineAngular6"
   },
   "author": "Microsoft Corp",
   "license": "MIT",
-  "dependencies": {
-    "rxjs": "^5.0.3"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "rxjs": "^5.0.3",
     "source-map-loader": "^0.1.5",
     "ts-loader": "^1.3.3",
     "typescript": "^2.3.2",
