--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "author": "Microsoft Corp",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "rxjs": "^6.3.3"
+  },
   "devDependencies": {
-    "rxjs": "^5.0.3",
+    "rxjs-compat": "^6.3.3",
     "source-map-loader": "^0.1.5",
     "ts-loader": "^1.3.3",
     "typescript": "^2.3.2",
