--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   "author": "demonking99",
   "license": "MIT",
   "dependencies": {
-    "rxjs": "^6.3.3"
+    "rxjs": "6.0.0"
   },
   "devDependencies": {
-    "rxjs-compat": "^6.3.3",
+    "rxjs-compat": "6.0.0",
     "source-map-loader": "^0.1.5",
     "ts-loader": "^1.3.3",
     "typescript": "^2.3.2",
